--- a/packages/plate/package.json
+++ b/packages/plate/package.json
@@ -25,21 +25,9 @@
   "license": "MIT",
   "sideEffects": false,
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
-    },
-    "./react": {
-      "types": "./dist/react/index.d.ts",
-      "import": "./dist/react/index.js",
-      "require": "./dist/react/index.js"
-    },
-    "./static": {
-      "types": "./dist/static/index.d.ts",
-      "import": "./dist/static/index.js",
-      "require": "./dist/static/index.js"
-    },
+    ".": "./dist/index.js",
+    "./react": "./dist/react/index.js",
+    "./static": "./dist/static/index.js",
     "./package.json": "./package.json"
   },
   "main": "./dist/index.js",
